--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
               </p>
             </div>
           </div>
-          <div class="hero__metrics metrics"> 
+          <div class="hero__metrics metrics full-vw-line full-vw-line--top full-vw-line--left"> 
             <dl class="metrics__list"> 
               <div class="metrics__item"> 
                 <dt class="metrics__key">Resources available</dt>
@@ -140,7 +140,7 @@
           <ul class="hero__advantages-list container"> 
             <li class="hero__advantages-item"> 
               <div class="advantage-card"> 
-                <svg class="icon icon-advantages-1" aria-hidden="true" width="50" height="50">
+                <svg class="icon icon-advantages-1 advantage-card__image" aria-hidden="true" width="50" height="50">
                   <use xlink:href="#icon-advantages-1"></use>
                 </svg><a class="advantage-card__link circle-icon" href=""> 
                   <h3 class="advantage-card__title h6">Latest News Updates</h3>
@@ -150,7 +150,7 @@
             </li>
             <li class="hero__advantages-item"> 
               <div class="advantage-card"> 
-                <svg class="icon icon-advantages-2" aria-hidden="true" width="50" height="50">
+                <svg class="icon icon-advantages-2 advantage-card__image" aria-hidden="true" width="50" height="50">
                   <use xlink:href="#icon-advantages-2"></use>
                 </svg><a class="advantage-card__link circle-icon" href=""> 
                   <h3 class="advantage-card__title h6">Expert Contributors</h3>
@@ -160,7 +160,7 @@
             </li>
             <li class="hero__advantages-item"> 
               <div class="advantage-card"> 
-                <svg class="icon icon-advantages-3" aria-hidden="true" width="50" height="50">
+                <svg class="icon icon-advantages-3 advantage-card__image" aria-hidden="true" width="50" height="50">
                   <use xlink:href="#icon-advantages-3"></use>
                 </svg><a class="advantage-card__link circle-icon" href=""> 
                   <h3 class="advantage-card__title h6">Global Readership</h3>
